website/code/fasta-icpp.log
BUILD COMMANDS FOR: fasta.icpp

Mon Oct 31 20:28:54 PST 2005

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  fasta.c++ -o fasta.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc fasta.c++.o -o fasta.icpp_run -O3 -ip -static -unroll  
fasta.c++(43): error: function "random" is not a type name
  	random *R;
  	^

fasta.c++(53): error: function "random" is not a type name
  	aacids(char *i, char *d, random *r, int n, struct aminoacids *g) : 
  	                         ^

fasta.c++(63): warning #470: qualified name is not allowed in member declaration
  	virtual void aacids::display() { cout << '>' << id << ' ' << desc << '\n'; }
  	             ^

fasta.c++(99): error: expression must have pointer-to-class type
  	double rnd = R->gen(1.0);
  	             ^

fasta.c++(192): error: expected a ";"
  	random r(IM, IA, IC);
  	       ^

fasta.c++(195): error: identifier "r" is undefined
  		i("TWO", "IUB ambiguity codes", &r, IUB_LEN, iub), 
  		                                 ^

compilation aborted for fasta.c++ (code 2)
make[2]: [fasta.icpp_run] Error 2 (ignored)
rm: cannot remove `fasta.c++.o': No such file or directory
rm: cannot remove `fasta.o': No such file or directory
make[2]: [fasta.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

fasta.icpp_run %A
Error, could not exec fasta.icpp_run 25000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/fasta:/opt/shootout/shootout/bench/fasta/tmp:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
